<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F3F4F9"
        android:backgroundTint="#F3F4F9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/miAlbumTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/mi_album"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nroCartasTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/cargando_cartas"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/miAlbumTextview"
            app:layout_constraintTop_toBottomOf="@+id/miAlbumTextview" />

        <ScrollView
            android:id="@+id/ScrollView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/NavbarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nroCartasTextview">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/cardsGridLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:columnCount="3" />
        </ScrollView>

        <LinearLayout
            android:id="@+id/NavbarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ScrollView"
            app:layout_constraintStart_toStartOf="@+id/ScrollView">

            <LinearLayout
                android:id="@+id/AlbumLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/albumButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nav_album" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ExplorarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/explorarButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nav_explorar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ChatsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/chatsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nav_chats" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/PerfilLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/perfilButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/nav_perfil" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>